[package]
name = "runtime-model"
version = "0.1.0"
edition = "2024"

[dependencies]
tree = { path = "../in-tree/tree" }
config-crap = { path = "../in-tree/config-crap", default-features = false, features = ["json", "minijinja", "extended_filters"] }
openrouter = { path = "../deps/openrouter" }
bytes = "1.11.0"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-service = "0.3.3"
uuid = { version = "1.19.0", features = ["v6", "v5"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["make", "util"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
seahash = "4.1.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
url = "2.5.8"
serde_json = "1.0.149"
anyhow = "1.0.100"
axum = "0.8.8"
hashbrown = "0.16.1"
jsonschema = "0.45.0"
mlua = { version = "0.11.6", default-features = false, features = ["luau", "luau-jit", "async", "anyhow", "serde", "send"] }
scc = "3.6.12"
