[package]
name = "yttrium"
version = "0.1.0"
edition = "2024"

[dependencies]
runtime-model = { path = "../runtime-model" }
bytes = "1.11.0"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
tower = { version = "0.5.3", features = ["make", "util"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.149"
hyper-util = "0.1.19"
tracing = "0.1.44"
