[package]
name = "lua-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.11.6", default-features = false, features = ["luau", "luau-jit", "async", "serde", "anyhow"] }
lua-integration-derive = { path = "./derive" }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
trybuild = "1.0"
